welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:1: error: not found: value max
def max1020(a:Int, b:Int):Int = {if (((9<a)&&(a<21))&&((9<b)&&(b<21))) return max(a,b)
                                                                              ^