welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {if (((9<a)&&(a<21))&&((9<b)&&(b<21))) return max(a,b)
                                 else 0}